--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "keep-react": "^1.6.1",
+    "mongoose": "^8.9.6",
     "next": "15.1.6",
     "phosphor-react": "^1.4.1",
     "react": "^19.0.0",
